# django-tenants

./: .env.sample  .gitignore  .readthedocs.yml  .travis.yml  CHANGES.rst  CHANGES.txt  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  Vagrantfile  docker-compose.yml  fabfile.py  provision_vagrant.sh  pyproject.toml  requirements.txt  run_tests.sh  run_tests_in_docker.sh  setup.py  vagrant_create_tenant.sh  version.py
.github/: dependabot.yml
.github/workflows/: code.yaml  code.yml  django.yml  postgres.yml  publish.yml
django-tenants/: __init__.py  middleware.py  models.py  routers.py  template_loaders.py  urlresolvers.py  utils.py
django-tenants/postgresql_backend/: base.py  introspection.py
django-tenants/templatetags/: tenant.py
django-tenants/test/: cases.py  client.py
django-tenants/tests/: models.py  test_routes.py  test_tenants.py  testcases.py
django_tenants/: __init__.py  admin.py  apps.py  cache.py  clone.py  clone_schema.sql  log.py  middleware.py  models.py  mypy_plugin.py  routers.py  settings_utils.py  signals.py  template_loaders.py  urlresolvers.py  utils.py
django_tenants/files/: storage.py  storages.py
django_tenants/middleware/: __init__.py  default.py  directfolder.py  main.py  subdomain_with_subfolder.py  subfolder.py  suspicious.py
django_tenants/migration_executors/: __init__.py  base.py  multiproc.py  standard.py  subproc.py
django_tenants/migrations/: 0001_initial.py
django_tenants/mysql_backend/: base.py  introspection.py
django_tenants/postgresql_backend/: _constraints.py  base.py  introspection.py
django_tenants/s3boto/: s3storages.py
django_tenants/staticfiles/: finders.py  storage.py
django_tenants/templatetags/: tenant.py
django_tenants/test/: cases.py  client.py  mixins.py
django_tenants/tests/: __init__.py  models.py  test_cache.py  test_commands.py  test_fast_tenants.py  test_filesystem_storage.py  test_middleware.py  (+12 more)
docs/: Makefile  conf.py  credits.rst  examples.rst  files.rst  index.rst  install.rst  involved.rst  links.rst  requirements.txt  static.rst  templates.rst  test.rst  use.rst
dts_test_project/: manage.py
(+125 files in other folders)
